Fri Sep 08 16:41:17 BST 2000 Olly Betts

	* Om*Iterator ought to now work as STL iterators; added test termlist2
	  for this - but it currently fails so is disabled.

	* Martin has fixed problem in makeDA so termlist1 now passes with da
	  backend.

Fri Sep  8 16:34:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Delve can now display several termlists, several postlists, or
	  lots of positionlists.

Fri Sep  8 12:02:05 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix Asserts in MultiPostList::skip_to(), and small bug in
	  MultiPostList::next();

	* debugging info to DBDatabase::skip_to().

	* delve now displays lists of docids or terms one per line, for easier
	  post-processing.

Fri Sep 08 11:02:53 BST 2000 Olly Betts

	* Reenabled termlist1 for DA backend so Martin can investigate bug.
 
Fri Sep 08 10:44:53 BST 2000 Olly Betts

	* Removed a number of superfluous semicolons.

Fri Sep  8 09:26:00 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add debugging to all methods of OmPostListIterator, and make
	  get_description tell the current position.

	* Fix MultiPostList - it was never getting off the initial position.

	* Correct some messages in db_database.cc which reported being from
	  a DA database.

Thu Sep  7 23:30:39 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add to PostList next() and skip_to() methods which don't take a
	  minimum weight, for use outside the matcher, or when moving
	  postlists to beginning for a MultiPostList.

Thu Sep  7 23:05:54 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Extra debugging stuff added to OmPostListIterators.

	* Remove assertions in termlist, positionlist and postlist at_end()
	  methods which check that list is not at beginning.  Calling at_end()
	  at the beginning of such lists is now valid, (and returns false, even
	  if the list is empty).

Thu Sep  7 18:44:51 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>